--- a/style.css
+++ b/style.css
@@ -39,10 +39,23 @@
   flex-direction: column;
   gap: 50px;
   justify-content: center;
-  background-color: lightgray;
+  background-color: #e7e7e7;
   padding: 100px 20px;
 }
 
 .two {
   padding: 10px;
 }
+
+.form {
+  display: flex;
+  justify-content: flex-start;
+  gap: 70px;
+  padding: 10px;
+}
+
+.form1 {
+  display: flex;
+  flex-direction: column;
+}
+
