--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 }
 
 .left {
-  height: 100vh;
+  position: sticky;
+  height: 100%;
   width: 30vw;
   background-image: url(./images/stars.jpg);
   color: white;
@@ -44,14 +45,14 @@
 }
 
 .two {
-  padding: 10px;
+  padding: 20px;
 }
 
 .form {
   display: flex;
   justify-content: flex-start;
   gap: 70px;
-  padding: 10px;
+  padding: 20px 0;
 }
 
 .form1 {
@@ -59,3 +60,26 @@
   flex-direction: column;
 }
 
+.three {
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: #e7e7e7;
+  height: 100%;
+}
+
+.submit {
+  width: 150px;
+  text-align: center;
+  padding: 10px 0;
+  background-color: #596D48;
+  border-radius: 10px;
+  color: white;
+  border-style: none;
+  cursor: pointer;
+}
+
+.submit:active {
+  background-color: #4a5a3c;
+}
